--- a/assets/index.css
+++ b/assets/index.css
@@ -1,18 +1,112 @@
-.container {
-    display: flex;
+html, body {
     background-color: hsl(30, 38%, 92%);
     
+    /* div stretch 100% page height regardless of content */
+    height: 100%; 
 }
-    .imageContainer {
-        width: 270px;
-        height: auto;
-        border-radius: 10px;
-        overflow: hidden;
+.parentContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100%;
+}
+.container {
+        display: inline-flex;
     }
-    .imageContainer img {
-        width: 100%;
-        height: 100%;
-    }
-    .productDeailsContainer {
+        .imageContainer {
+            width: 285px;
+            height: auto;
+            border-top-left-radius: 10px;
+            border-bottom-left-radius: 10px;
+            overflow: hidden;
+        }
+        .imageContainer img {
+            width: 100%;
+            height: 100%;
+        }
+        .productDeailsContainer {
+            width: 300px;
+            border-top-right-radius: 10px;
+            border-bottom-right-radius: 10px;
+            overflow: hidden;
+            background-color: white;
+        }
+            .productType {
+                font-size: 0.8em;
+                font-family: 'Montserrat', sans-serif;
+                text-transform: uppercase;
+                color: rgb(143, 145, 150);
+                letter-spacing: 0.3em;
 
-    }
+                margin-top: 30px;
+                margin-left: 30px;
+            }
+            .productTitle {
+                font-size: 2em;
+                font-family: 'Fraunces', serif;
+                letter-spacing: 0.03em;
+                line-height: 1em;
+                width: 200px;
+
+                margin-top: 20px;
+                margin-bottom: 25px;
+                margin-left: 30px;
+            }
+            .productDescription {
+                font-size: 0.9em;
+                font-family: 'Montserrat', sans-serif;
+                color: rgb(143, 145, 150);
+                line-height: 1.6em;
+
+                width: 230px;
+
+                margin-top: 0px;
+                margin-bottom: 10px;
+                margin-left: 30px;
+            }
+            .pricesContainer {
+                display: flex;
+                align-items: center;
+                gap: 30px;
+                height: 50px;
+                margin-left: 30px;
+            }
+                .productPriceOffer {
+                    font-size: 2em;
+                    font-family: 'Fraunces', serif;
+                    color: hsl(158, 36%, 37%);
+                    letter-spacing: 0.03em;
+                }
+                .productPriceFull {
+                    font-size: 0.8em;
+                    font-family: 'Montserrat', sans-serif;
+                    color: rgb(143, 145, 150);
+                    text-decoration: line-through;
+                }
+            .buttonContainer {
+                display: flex;
+                /* align-items: flex-start; */
+                width: 260px;
+                height: 70px;
+                
+            }
+                .buyButton {
+                    all: unset;
+
+                    flex-grow: 1;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    gap: 7px;
+                    background-color: hsl(158, 36%, 37%);
+                    font-size: 0.8em;
+                    font-family: 'Montserrat', sans-serif;
+                    color: white;
+                    text-align: center;
+
+                    border-radius: 10px;
+                    height: 40px;
+                    margin-top: 20px;
+                    margin-left: 30px;
+                }
+
